# project_dm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
migrations/: README  env.py
migrations/versions/: 20260606_01_initial_schema.py  20260624_01_add_nlp_tfidf_columns.py  20260625_01_add_product_recommendations.py
notebooks/: review_likes_eda.ipynb
project_dm/: __init__.py
scripts/: build_review_likes_eda_notebook.py  check_db_access.py  entrypoint.sh
src/project_dm/: __init__.py  brands.py  cli.py  db.py  models.py  nlp.py  recommendations.py  schemas.py
src/project_dm/commands/: __init__.py  configure_db_permissions.py  explore_emag.py
src/project_dm/repositories/: __init__.py  brands.py  dashboard.py  jobs.py  nlp.py  products.py  recommendations.py  reviews.py  service_controls.py
src/project_dm/scraping/: __init__.py  guards.py  listing.py  product.py  reviews.py
src/project_dm/web/: __init__.py  app.py
src/project_dm/web/static/: app.css  manifest.webmanifest  sw.js
src/project_dm/web/templates/: _job_table.html  _review_card.html  base.html  captcha.html  dashboard.html  jobs.html  product_detail.html  products.html  pwa_debug.html  reviews.html  solve_review.html  workers.html
src/project_dm/workers/: __init__.py  listing.py  nlp.py  product.py  reviews.py  supervisor.py
tests/: test_brands.py  test_captcha_review_status.py  test_guards.py  test_import_smoke.py  test_listing_parser.py  test_nlp.py  test_package.py  test_product_parser.py  test_pwa_debug.py  test_pwa_routes.py  test_recommendations.py  test_repositories.py  test_review_parser.py  test_review_status_handling.py  test_service_worker.py  test_web.py
