[project]
name = "project-dm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "playwright>=1.60.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "selectolax>=0.4.10",
    "sqlalchemy>=2.0.50",
    "tenacity>=9.1.4",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
