[project]
name = "project-dm"
version = "0.1.0"
description = "Collect and analyze eMAG product reviews."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "playwright>=1.60.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "selectolax>=0.4.10",
    "sqlalchemy>=2.0.50",
    "tenacity>=9.1.4",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
project-dm = "project_dm.cli:main"
project-dm-web = "project_dm.web.app:main"
emag-explore = "project_dm.commands.explore_emag:main"
db-check-access = "project_dm.commands.check_db_access:main"
db-configure-permissions = "project_dm.commands.configure_db_permissions:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
