[project]
name = "project-dm"
version = "0.1.0"
description = "Collect and analyze eMAG product reviews."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "jinja2>=3.1.6",
    "jupyterlab>=4.6.0",
    "langdetect>=1.0.9",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "selectolax>=0.4.10",
    "sqlalchemy>=2.0.50",
    "tenacity>=9.1.4",
    "typer>=0.26.7",
    "uvicorn[standard]>=0.49.0",
    "wordcloud>=1.9.6",
]

[project.scripts]
project-dm = "project_dm.cli:main"
serve = "project_dm.web.app:main"
emag-explore = "project_dm.commands.explore_emag:main"
db-check-access = "project_dm.commands.check_db_access:main"
db-configure-permissions = "project_dm.commands.configure_db_permissions:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
